# CanViT-rl

./: .gitignore  README.md  pyproject.toml
apptainer/: canvit_rl.def
canvit_rl/: ade_labels.py  canvas_state.py  canvit_precision.py  env.py  eval_miou.py  greedy.py  policy.py  reward.py  sac_models.py  sac_state.py  synthetic_data.py  train.py  viewpoint_policy.py
canvit_rl/canvas/: __init__.py  args.py  checkpoints.py  eval.py  logging.py  ppo.py  sac.py  state.py  training.py  visualization.py
canvit_rl/pretrain_IN21k/: __init__.py  checkpoints.py  dense_train_batch.py  pretrain_modules.py  reward.py
configs/: default.yaml
scripts/: analyze_scale_threshold.py  canvas_ppo_optuna.py  canvas_sac_optuna.py  compare_miou_runs.py  eval_adaglimpse_canvit_sac_miou.py  eval_canvit_critic.py  eval_canvit_sac_miou.py  eval_entropy_c2f_miou.py  eval_random_baseline_miou.py  generate_synthetic_dataset.py  pretrain_canvit_critic.py  run_entropy_c2f.py  run_greedy.py  train_adaglimpse_canvit_sac.py  train_canvas_ppo.py  train_canvas_sac.py  train_canvit_sac.py  train_i21k_dense_sac.py  train_in21k_critic.py  train_viewpoint_bc.py  train_viewpoint_sac.py  visualize_policy_glimpses.py  visualize_sac_reward_maps.py
scripts/synthetic_dataset/: _paths.py  eval_mnist_glimpse_t0.py  generate_mnist_glimpse_dataset.py  generate_synthetic_dataset.py  (+2 more)
slurm/: train_sac.sh
synthetic_segmentation/: metadata_training.csv  metadata_validation.csv
tests/: conftest.py  test_actor_init.py  test_canvas_critic_local_features.py  test_canvas_ppo.py  test_env.py
