[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvit_rl"]

[project]
name = "canvit-rl"
version = "0.1.0"
description = "RL policy for active-vision glimpse selection on top of CanViT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "canvit-pytorch>=0.1.10",
    "canvit-eval",
    "torch>=2.9.0",
    "torchvision>=0.22.0",
    "numpy>=2.2.0,<2.4.0",
    "gymnasium>=1.0.0",
    "pyyaml>=6.0",
    "huggingface-hub>=1.3.2",
    "safetensors>=0.7.0",
    "canvit-specialize",
]

[project.optional-dependencies]
# Uncomment and add your RL framework of choice here, e.g.:
# sb3 = ["stable-baselines3>=2.0.0"]
# cleanrl = ["cleanrl-exp @ git+https://github.com/vwxyzjn/cleanrl.git"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.0",
    "basedpyright>=1.36.0",
    "ipython>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["canvit_rl", "tests"]
python_files = ["test.py", "test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "network: marks tests that require network access",
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 88

[tool.uv.sources]
canvit-pytorch = { git = "https://github.com/m2b3/CanViT-PyTorch.git" }
canvit-specialize = { git = "https://github.com/m2b3/CanViT-specialize.git" }
canvit-eval = { git = "https://github.com/m2b3/CanViT-eval.git" }
